cable/header z-index fix

--- a/src/components/cable/cable.less
+++ b/src/components/cable/cable.less
@@ -1,6 +1,6 @@
 svg {
 	position:absolute;
-	z-index: 100;
+	z-index: 99;
 	pointer-events: none;
 
 	circle {
